--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Adding config.py file.
+config.py 
+
+# Adding additiona files.
+API_practice.ipynb 
+random_numbers.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
